# pst-front

./: .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.org  angular.json  package-lock.json  package.json
.github/workflows/: tauri.yml
src/: index.html  styles.scss
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/bots/: twitch.rs
src-tauri/src/server/ddbb/: twitch.rs
src-tauri/src/server/handlers/: example.rs  twitch.rs
src-tauri/src/server/models/: twitch.rs
src-tauri/src/server/websocket/: mod.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/components/nav/: nav.component.html  nav.component.scss  nav.component.ts
src/app/layout/controller-layout/: controller-layout.component.html  controller-layout.component.scss  controller-layout.component.spec.ts  controller-layout.component.ts
src/app/layout/overlay/: overlay.component.ts
src/app/modules/: material-ui.module.ts
src/app/modules/obs/: obs-routing.module.ts  obs.module.ts
src/app/modules/obs/models/: scene.model.ts  source.model.ts  transform-data.model.ts
src/app/modules/obs/services/: common.service.ts  constants.ts  logged-in-guard.service.ts  obs-api.service.ts  obs-auth.service.ts
src/app/modules/twitch/: twitch-constants.ts  twitch-routing.module.ts  twitch.module.ts
src/app/services/: websocket.service.ts
src/environments/: environment.desktop.ts  environment.obsweb.ts
(+40 files in other folders)
