[package]
name = "PST"
version = "0.9.7"
description = "A collection of streaming tools"
authors = ["Perju"]
license = "MIT"
repository = "https://github.com/Perju/pst-front"
default-run = "PST"
edition = "2021"
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
rusqlite = { version = "0.32.1", features = ["bundled"] }
actix-cors = "0.6.4"
twitch_api = { version = "0.7.0-rc.8", features = ["twitch_oauth2", "helix", "client", "reqwest"] }
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["full"]  }
dotenv = "0.15.0"
tokio-js-set-interval = "1.3.0"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
tungstenite = "0.27.0"
log = "0.4.27"
uuid = "1.17.0"
env_logger = "0.11.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(windows)'.build-dependencies]
winres="0.1"
